Fix mobile spacing

--- a/src/css/Graph.css
+++ b/src/css/Graph.css
@@ -4,6 +4,6 @@
 
 @media only screen and (max-width: 600px) {
   #myChart {
-    min-height: 250px;
+    min-height: 230px;
   }
 }
